force-app/main/default/objects/Bank_Information__c/Bank_Information__c.object-meta.xml
<CustomObject>
    <label>Bank Information</label>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>