force-app/main/default/objects/Bank_Information__c/fields/ACH_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Routing_Number__c</fullName>
    <label>ACH Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>