force-app/main/default/objects/Bank_Information__c/fields/Beneficiary_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Account_Name__c</fullName>
    <label>Beneficiary Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>