force-app/main/default/objects/Bank_Information__c/fields/Beneficiary_Bank_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank_Address_Country__c</fullName>
    <label>Beneficiary Bank Address(Country)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>