force-app/main/default/objects/Bank_Information__c/fields/Beneficiary_Bank_Address_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank_Address_State_Province__c</fullName>
    <label>Beneficiary Bank Address(State/Province)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Beneficiary_Bank_Address_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>