force-app/main/default/objects/Bank_Information__c/fields/Beneficiary_Bank_AddressCity__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank_AddressCity__c</fullName>
    <label>Beneficiary Bank Address(City)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>