force-app/main/default/objects/Bank_Information__c/fields/Beneficiary_Bank_AddressStreet_Address__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank_AddressStreet_Address__c</fullName>
    <label>Beneficiary Bank Address(Street Address)</label>
    <type>TextArea</type>
</CustomField>