force-app/main/default/objects/Bank_Information__c/fields/Beneficiary_Bank_ZipcodePostal_Code__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank_ZipcodePostal_Code__c</fullName>
    <label>Beneficiary Bank (Zipcode/Postal Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>