force-app/main/default/objects/Bank_Information__c/fields/Company_Name_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Vendor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name/Vendor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bank Informations</relationshipLabel>
    <relationshipName>Bank_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>