force-app/main/default/objects/Bank_Information__c/fields/Invoice_Process__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Process__c</fullName>
    <label>Invoice Process</label>
    <length>100</length>
    <type>Text</type>
</CustomField>