force-app/main/default/objects/Bank_Information__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NET10</fullName>
            </value>
            <value>
                <fullName>NET30</fullName>
            </value>
            <value>
                <fullName>NET45</fullName>
            </value>
            <value>
                <fullName>NET60</fullName>
            </value>
            <value>
                <fullName>NET90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>