force-app/main/default/objects/Bank_Information__c/fields/State1__c.field-meta.xml
<CustomField>
    <fullName>State1__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>