force-app/main/default/objects/Bank_Information__c/validationRules/Account_Number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter Account Number</errorMessage>
</ValidationRule>